--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -764,7 +764,7 @@ function loadData() {
     header.id = 'group-header-'+group;
     header.alt = group;
     header.onclick = toggleGroup;
-    header.title = [plural(Object.values(counters[group]).reduce((a,c)=>a+c,0),'marker'), plural(Object.values(counters[group]).length,'category')].join(' in ');
+    header.title = [plural(Object.values(counters[group]).length,'category'),plural(Object.values(counters[group]).reduce((a,c)=>a+c,0),'marker')].join(' of ');
 
     nodes.push(header);
 
@@ -808,7 +808,7 @@ function loadData() {
       li.appendChild(c2);
       div.appendChild(li);
 
-      li.title = [plural(count,'marker'),plural(Object.values(counters2[group][type]).length,'type')].join(' of ');
+      li.title = [plural(Object.values(counters2[group][type]).length,'type'), plural(count,'marker')].join(' of ');
 
       //console.log(counters[group][type]);
     }
