--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -158,6 +158,8 @@ let maps = {
   'CamdenWorld': { name: 'Camden', scale: 3.77, offset: {x:15000, y:-126000} },
   'BankofEnglandWorld': { name:'Bank of England', scale: 3.77, offset: {x:6000, y:4800} },
   'CoventGardenWorldSpace': { name:'Covent Garden', scale: 3.77, offset: {x:6000, y:4800}, hidden: true },
+  'BromleyGladesWorld': { name: 'Bromley Glades', scale: 1, offset: {x:0, y:0}, hidden: true },
+  'StPaulsWorld': { name: 'St Pauls', scale: 1, offset: {x:0, y:0}, hidden: true }
 };
 
 function createMap() {
