--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -75,6 +75,43 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
   </div>
 </div>
 
+<div id="right-sidebar" class="sidebar">
+  <div class="sidebar-close" onclick="toggleNav(this)"><div class="container middle"><i class="triangle"></i></div></div>
+  <div class="panel">
+    <h2>Progress Tracker</h2>
+    <hr/>
+      <span id="toggle-found" class="button-toggle"><i class="icon fa fa-eye"></i>Found Locations</span>
+    <hr/>
+
+    <div id="user-panel">
+      <div class="category-progress">
+      </div>
+
+      <div class="button-panel" id="track-category-button">
+        <span id="track-category" onclick="toggleVisibility(['#track-category-panel','#track-category-button'])">Track Category +</span>
+      </div>
+
+      <div id="track-category-panel" class="button-panel collapsed">
+        <select id="track-categories" class="form-control"><option>Select a Category</option></select>
+        <button class="btn" onclick="addTrack(this)">Track Category</button>
+        <button class="btn" onclick="toggleVisibility(['#track-category-panel','#track-category-button'])">x</button>
+      </div>
+
+      <hr/>
+
+      <div class="button-panel">
+        <input id="file" type='file' hidden/>
+        <button onclick="loadLocalData()" class="btn-link">Load</button>
+        <button onclick="saveLocalData()" class="btn-link">Save</button>
+        <button onclick="unmarkAll()" class="btn-link">Unmark All</button>
+        <!--button onclick="openLoadFileDialog()" class="btn-link" disabled title="not implemented yet">Load Game</button-->
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
 <div id="alert" class="closed">Copied To Clipboard</div>
 
 <div id="popup" class="popup">
@@ -161,6 +198,93 @@ let maps = {
   'BromleyGladesWorld': { name: 'Bromley Glades', scale: 1, offset: {x:0, y:0}, hidden: true },
   'StPaulsWorld': { name: 'St Pauls', scale: 1, offset: {x:0, y:0}, hidden: true }
 };
+
+
+function addTrack(e) {
+  let sel = document.querySelector('#track-category-panel > select');
+  if (value = sel[sel.selectedIndex].value) {
+    settings.track[value] = true;
+    saveSettings();
+    markItems();
+  }
+}
+
+function unmarkItems() {
+  settings.markedItems={};
+  markItems();
+}
+
+function loadLocalDataFile() {
+  var file = document.querySelector("#file").files[0];
+  if (file) {
+    var reader = new FileReader();
+    reader.readAsText(file, "UTF-8");
+    reader.onload = function (evt) {
+      let data = evt.target.result;
+      evt.target.value = null;
+      try {
+        localData = JSON.parse(data);
+        settings = localData[mapId];
+        console.log('New settings loaded.');
+        saveSettings();
+        markItems();
+      } catch(e) {
+        console.log(e);
+      }
+    }
+    reader.onerror = function (evt) {
+      alert('error reading file');
+    }
+  }
+}
+
+function loadLocalData() {
+  document.querySelector('#file').onchange = function(e) {
+    loadLocalDataFile();
+  }
+  document.querySelector('#file').value = null;
+  document.querySelector('#file').accept = '.json';
+  document.querySelector('#file').click();
+}
+
+async function saveTextToFile(text, filename) {
+  const fileHandle = await window.showSaveFilePicker({
+    suggestedName: filename,
+    types: [{
+      description: 'JSON Files',
+      accept: {'text/json': ['.json']},
+    }],
+  });
+  const writableStream = await fileHandle.createWritable();
+  await writableStream.write(text);
+  await writableStream.close();
+}
+
+function saveTextToFileOld(data, filename) {
+  var blob = new Blob([data], {type: 'text/json'});
+  if(navigator.msSaveOrOpenBlob) {
+      navigator.msSaveOrOpenBlob(blob, filename);
+  } else {
+      var a = document.body.appendChild(document.createElement("a"));
+      a.href = URL.createObjectURL(blob);
+      a.download = filename;
+      a.click();
+      a.remove();
+  }
+}
+
+function saveLocalData() {
+  let data = localStorage.getItem(localDataName);
+  let filename = localDataName + '.json';
+  saveTextToFile(data, filename);
+}
+
+function unmarkAll() {
+  if (confirm('Are you sure you want to unmark all items?')) {
+    unmarkItems();
+    saveSettings();
+  }
+}
 
 function createMap() {
   // fill map switcher panel
@@ -436,12 +560,15 @@ function toggleItems(e, show, parent) {
 
 
 function markItems() {
+
   // update markers
   for (marker of markerLayer._geoList) {
     let o = marker.properties;
     let t = getType(o);
     marker.updateSymbol({markerOpacity: settings.markedItems[o.marker_id] ? 0.5 : 1 });
-    settings.hiddenItems[t.type] ? marker.hide() : marker.show();
+    let hide = settings.hiddenItems[t.type];
+    if (settings.hideFound && settings.markedItems[o.marker_id]) hide = true;
+    hide ? marker.hide() : marker.show();
   }
 
   // mark DOM structure on the page
@@ -452,6 +579,85 @@ function markItems() {
       div.classList.remove('hidden');
     }
   });
+
+  updateTracking();
+}
+
+function toggleTrack(e) {
+  e.preventDefault();
+  let id = e.target.alt;
+  //settings.track[id] = !settings.track[id];
+  saveSettings();
+  return toggleItems(e, e.target.classList.contains('hidden'), [e.target]);
+}
+
+function updateTracking() {
+  let total = {};
+  let marked = {};
+  let cached_types = {};
+
+  for (marker of markerLayer._geoList) {
+    let o = marker.properties;
+    let t = getType(o);
+    let found = settings.markedItems[o.marker_id];
+    total[t.type] = (total[t.type] || 0) + 1;
+    marked[t.type] = (marked[t.type] || 0) + (found ? 1 : 0);
+    cached_types[t.type] = {...cached_types[t.type], ...t};
+  }
+
+  let base = document.querySelector('.category-progress');
+  base.innerHTML = '';
+
+  for (type of Object.keys(settings.track).sort(cmpAlphaNum)) {
+    let t = cached_types[type];
+
+    let div = document.createElement('div');
+    div.className = 'progress-item-wrapper';
+    base.append(div);
+
+    let li = document.createElement('div');
+    li.className = 'item';
+    li.classList.add('progress-item');
+    li.alt = t.type;
+    li.title = t.type;
+    li.onclick = toggleTrack;
+
+    if (settings.hiddenItems[type]==true) {
+      li.classList.add('hidden');
+    }
+
+    let c0 = document.createElement('span');
+    c0.className = 'icon';
+    c0.classList.add('fa');
+    c0.classList.add('fa-'+(t.group_fa || t.fa));
+
+    let c1 = document.createElement('span');
+    c1.className = 'title';
+    c1.innerHTML = t.type;
+
+    let c2 = document.createElement('span');
+    c2.className = 'counter';
+    c2.innerHTML = (marked[t.type] || 0) + '/' + (total[t.type] || 0);
+
+    let c3 = document.createElement('div');
+    c3.className = 'progress-item-remove';
+    c3.innerHTML = 'x';
+    c3.alt = type;
+    c3.onclick = function(e) { // removeTrack
+      let type = e.target.alt;
+      if (confirm('Are you sure you want to delete this category?')) {
+        delete settings.track[type];
+        saveSettings();
+        markItems();
+      }
+    }
+
+    li.appendChild(c0);
+    li.appendChild(c1);
+    li.appendChild(c2);
+    div.appendChild(li);
+    div.appendChild(c3);
+  }
 }
 
 function toggleMarked(id) {
@@ -464,6 +670,7 @@ function toggleMarked(id) {
       break;
     }
   }
+  updateTracking();
   saveSettings();
 }
 
@@ -651,7 +858,7 @@ let mouseMoved = false;
 document.addEventListener('mousedown', function(event) {mouseMoved = false; });
 document.addEventListener('mousemove', function(event){mouseMoved = true;});
 
-function loadData() {
+function loadMarkers() {
   let counters = {};
   let counters2 = {};
 
@@ -848,6 +1055,29 @@ function loadData() {
     }
   }
 
+  // build category selector
+  let sel = document.querySelector('#track-category-panel > select');
+  sel.innerHTML = '';
+  let opt = document.createElement('option');
+  opt.innerHTML = 'Select a Category';
+  opt.value = '';
+  sel.appendChild(opt);
+
+  items = [];
+  for (group of Object.keys(counters)) {
+    for ([type, count] of Object.entries(counters[group])) {
+      items.push([type, type]);
+    }
+  }
+
+  for ([name,type] of items.sort(cmpAlphaNum)) {
+    let opt = document.createElement('option');
+    opt.value = type;
+    opt.innerHTML = name;
+    opt.title = name + ' (' + type + ')';
+    sel.appendChild(opt);
+  }
+
   mapParam = {}; // critical to reload map properly
 }
 
@@ -865,7 +1095,7 @@ function loadMap(id) {
   let promises = ['./markers.json'].map(url=>fetch(url).then(r=>r.json()));
   Promise.all(promises).then(values => {
     markers = values[0];
-    loadData();
+    loadMarkers();
   }).catch(e=>{console.log(e);})
 
   return false;
@@ -1048,6 +1278,7 @@ window.onload = function(event) {
     }
     localData[id].markedItems = localData[id].markedItems || {};
     localData[id].hiddenItems = localData[id].hiddenItems || {};
+    localData[id].track = localData[id].track || {};
     localData[id].searchText = localData[id].searchText || '';
   }
 
@@ -1137,8 +1368,15 @@ window.onload = function(event) {
       openSearch(text);
     }
   }
+
+  setClass(document.querySelector('#toggle-found'),settings.hideFound,'hidden');
+  document.querySelector('#toggle-found').onclick = function(e) {
+    settings.hideFound = toggleClass(e.target,'hidden');
+    markItems();
+    saveSettings();
+  }
 }
 
 </script>
 
-<a href="https://github.com/joric/maps/wiki/Fallout-London" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+<!--a href="https://github.com/joric/maps/wiki/Fallout-London" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style-->
