--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -72,6 +72,8 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
       </ul>
     </div>
 
+    <hr/>
+    <a href="https://github.com/joric/maps/wiki/Fallout-London" class="link" target=_blank><span class="fa-brands fa-wikipedia-w"></span> About the map</a>
   </div>
 </div>
 
