--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -70,10 +70,12 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
     <div id="categories-wrapper">
       <ul id="categories">
       </ul>
-    </div>
 
     <hr/>
     <a href="https://github.com/joric/maps/wiki/Fallout-London" class="link" target=_blank><span class="fa-brands fa-wikipedia-w"></span> About the Map</a>
+
+    </div>
+
   </div>
 </div>
 
@@ -1327,13 +1329,13 @@ window.onload = function(event) {
   });
 
   window.addEventListener("keydown",function (e) {
-    //console.log(e.code);
-    if(document.getElementById('map') == document.activeElement) {
-      pressed[e.code] = true;
-    } else {
+
+    if (document.activeElement == document.querySelector('#search-input')) {
       pressed = {};
       return;
     }
+
+    pressed[e.code] = true;
 
     switch (e.code) {
       case 'KeyR':
