--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -157,9 +157,11 @@
     img = L.distortableImageOverlay(imageURL, {
       mode: 'lock',
       //selected: true,
-      actions: [L.DragAction, L.ScaleAction, L.DistortAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.ExportAction, L.DeleteAction, L.RestoreAction],
+      //actions: [L.DragAction, L.ScaleAction, L.DistortAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.ExportAction, L.DeleteAction, L.RestoreAction],
       //actions: [L.ScaleAction, L.RotateAction, L.OpacityAction, L.RestoreAction, L.LockAction],
       //actions: [L.ScaleAction, L.OpacityAction, L.RestoreAction, L.LockAction],
+      actions: [L.ScaleAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.RestoreAction],
+
     }).on('update', imageUpdated)
       .on('load', e=>{ setTimeout(function(){ imageLoaded(img) }, 0) })
       .addTo(map)
